N-ary Tree Preorder Traversal